[gd_scene load_steps=6 format=3 uid="uid://bh82wjuv05xha"]

[ext_resource type="Script" path="res://Scenes/fruit_spawner.gd" id="1_nivr8"]
[ext_resource type="Texture2D" uid="uid://cfte7ar5s4or5" path="res://Assets/Fruits/Fruit_Cherry.png" id="2_q02mm"]
[ext_resource type="Theme" uid="uid://veh2p1lln2ov" path="res://label_theme.tres" id="3_7xiv3"]
[ext_resource type="FontFile" uid="uid://ccnln6n4c0g54" path="res://Assets/Fonts/upheavtt.ttf" id="4_y1s82"]

[sub_resource type="CircleShape2D" id="CircleShape2D_txw6k"]
radius = 12.0

[node name="FruitSpawner" type="Area2D"]
position = Vector2(0, 73)
script = ExtResource("1_nivr8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.83333, 1.83333)
texture = ExtResource("2_q02mm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_txw6k")

[node name="PointsLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -22.0
offset_top = -13.0
offset_right = 23.0
offset_bottom = 13.0
theme = ExtResource("3_7xiv3")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_y1s82")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HideLabelTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HideLabelTimer" to="." method="_on_hide_label_timer_timeout"]
